added random frequencies, callibration, result display and white noise

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
       Hearing Test
     </h1>
     <div id="testing_field">
-          <p id="instructions">Press the start button to start the test</p>
-      <button class="pure-material-button-contained" id="main_button">Start</button>
-      <input id="volume" type="range" min="0" max="1" step="0.05" value="0"/>
+          <p id="instructions">Before taking the test, please make sure you are wearing headphones and that you are in a quiet environment.
+            Then press the button to start callibration for the test. 
+          </p>
+      <button class="pure-material-button-contained" id="main_button">Start Callibration</button>
+      <input hidden id="volume" type="range" min="0" max="1" step="0.005" value="0"/>
+      <audio id="audio" src="assets/CallibratingTrack.mp3"></audio>
     </div>
-    <div id="keyboard"></div>
+    <div id='results'></div>
     <section></section>
     <script src="js/waveCanvas.js"></script>
     <script src="js/main.js"></script>
