Added welcome page to tester; changed index file

--- a/welcome.html
+++ b/welcome.html
@@ -10,7 +10,7 @@
       <p>Hearing Test</p>
     </div>
     <div class="startButton">
-        <a href="tester.html"> 
+        <a href='https://ide.geeksforgeeks.org/'> 
             <button class=".starter">Start Here</button>
         </a>
     </div>
