fixing welcome page margins

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
 <div class="welcome">
   <p>Logo</p>
-  <h1>Welcome to the</h1>
-  <p>Hearing Test</p>
+  <h1 style="font-size: 4em;color: white">Welcome to the</h1>
+  <h1 style="font-size: 6em;margin-top: 0.67em;margin-bottom: 0.67em;">Hearing Test</h1>
   <div class="startButton">
         <a href="tester.html"> 
             <button class=".starter">Start Here</button>
