--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <div class="welcome">
   <p>Logo</p>
   <h1 style="font-size: 4em;color: white">Welcome to the</h1>
-  <h1 style="font-size: 6em;margin-top: 0.67em;margin-bottom: 0.67em;">Hearing Test</h1>
-  <div class="startButton">
+  <h1 style="font-size: 5em;margin-top: 0.67em;margin-bottom: 0.67em;">Hearing Test</h1>
+  <div class="welcome-button">
         <a href="tester.html"> 
             <button class=".starter">Start Here</button>
         </a>
