adding team logo

--- a/welcome.html
+++ b/welcome.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <div class="background">
     <div class="topleft">
-      <p>Logo</p>
+        <img src="assets/team_logo.png" alt="team_logo" height="300px" width="300%">
     </div>
     <div class="welcome">
       <h1>Welcome to the</h1>
