--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h1 style="font-size: 4em;color: white">Welcome to the</h1>
   <h1 style="font-size: 5em;margin-top: 0.67em;margin-bottom: 0.67em;">Hearing Test</h1>
   <div>
-        <a href="tester.html"> 
+        <a href="instructions.html"> 
             <button class="welcome-button">Start Here</button>
         </a>
   </div>
