adding more styling

--- a/instructions.html
+++ b/instructions.html
@@ -10,7 +10,7 @@
 
   <h1 style="font-size: 2em;color: white">Before starting the test</h1>
   <ul class="instruction-list">
-    <li>Make sure that you are using the Firefox browser<li>
+    <li>Make sure that you are using the Firefox browser</li>
     <li>Find a quiet environment to take the test</li>
     <li>Use Headphones or earphones while taking the test</li>
   </ul>
