--- a/tester.html
+++ b/tester.html
@@ -11,8 +11,7 @@
       Hearing Test
     </h1>
     <div id="testing_field">
-          <p id="instructions">Before taking the test, please make sure you are wearing headphones and that you are in a quiet environment.
-            Then press the button to start callibration for the test. 
+          <p id="instructions">Please press the "Start Callibration" button to begin Callibration for the test. 
           </p>
       <button class="pure-material-button-contained" id="main_button">Start Callibration</button>
       <input hidden id="volume" type="range" min="0" max="1" step="0.005" value="0"/>
