--- a/tester.html
+++ b/tester.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+    <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px" class="welcome">
     <h1 style="text-align:center">
       Hearing Test
     </h1>
