fixing wordings and functionality

--- a/tester.html
+++ b/tester.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px" class="logo">
+    <img src="assets/team_logo.png" alt="team_logo" class="logo">
     <h1 style="text-align:center">
       Hearing Test
     </h1>
     <div id="testing_field">
-          <p id="instructions">Please press the "Start Callibration" button to begin Callibration for the test. 
+          <p id="instructions">Please press the "Start Calibration" button to begin Calibration for the test. 
           </p>
-      <button class="pure-material-button-contained" id="main_button">Start Callibration</button>
+      <button class="pure-material-button-contained" id="main_button">Start Calibration</button>
       <input hidden id="volume" type="range" min="0" max="1" step="0.005" value="0"/>
       <audio id="audio" src="assets/CallibratingTrack.mp3"></audio>
     </div>
