--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
 <div class="welcome">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
-  <h1 style="font-size: 3em;color: white">Welcome to the</h1>
+  <h1 style="font-size: 1em;color: white">Please enter your 4 digit pin</h1>
   <h1 style="font-size: 3em;margin-top: 0.67em;margin-bottom: 0.67em;">Hearing Test</h1>
   <div>
         <a href="instructions.html"> 
