--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
   </head>
 <div class="welcome">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
-  <h1 style="font-size: 1em;color: white">Please enter your 4 digit pin</h1>
+  <h1 style="font-size: 1em;color: white;">Please enter your 4 digit pin</h1>
   <h1 style="font-size: 3em;margin-top: 0.67em;margin-bottom: 0.67em;">Hearing Test</h1>
+  <div id="pinpad" class="btn-group btn-matrix mb-3">
+    <button class="btn btn-dark" data-value="1">1</button>
+    <button class="btn btn-dark" data-value="2">2</button>
+    <button class="btn btn-dark" data-value="3">3</button>
+    <button class="btn btn-dark" data-value="4">4</button>
+    <button class="btn btn-dark" data-value="5">5</button>
+    <button class="btn btn-dark" data-value="6">6</button>
+    <button class="btn btn-dark" data-value="7">7</button>
+    <button class="btn btn-dark" data-value="8">8</button>
+    <button class="btn btn-dark" data-value="9">9</button>
+  </div>
+    <pre id="results"></pre>
+  </div>
   <div>
+
+
         <a href="instructions.html"> 
             <button class="welcome-button">Start Here</button>
         </a>
