--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <button class="btn btn-dark" data-value="7">7</button>
     <button class="btn btn-dark" data-value="8">8</button>
     <button class="btn btn-dark" data-value="9">9</button>
+    <button class="btn btn-dark" data-value="9">0</button>
+    <button class="btn btn-dark" data-value="9">Undo</button>
+    <button class="btn btn-dark" data-value="9">Clear</button>
   </div>
     <pre id="results"></pre>
   </div>
