adding more visual UI elements

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Welcome Page</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
-<div class="welcome">
+<div class="pinpad">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
   <h1 style="font-size: 1em;color: white;">Please enter your 4 digit pin</h1>
   <h1 style="font-size: 3em;margin-top: 0.67em;margin-bottom: 0.67em;">Hearing Test</h1>
@@ -19,9 +19,9 @@
     <button class="btn btn-dark pin-button" data-value="7">7</button>
     <button class="btn btn-dark pin-button" data-value="8">8</button>
     <button class="btn btn-dark pin-button" data-value="9">9</button>
-    <button class="btn btn-dark pin-button" data-value="9">0</button>
-    <button class="btn btn-dark pin-button" data-value="9">Undo</button>
-    <button class="btn btn-dark pin-button" data-value="9">Clear</button>
+    <button class="btn btn-dark pin-button" data-value="x">X</button>
+    <button class="btn btn-dark pin-button" data-value="0">0</button>
+    <button class="btn btn-dark pin-button" data-value="login">login</button>
   </div>
     <pre id="results"></pre>
   </div>
