--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Welcome Page</title>
+    <title>Login</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
 <div class="pinpad">
@@ -21,15 +21,12 @@
     <button class="btn btn-dark pin-button" data-value="9">9</button>
     <button class="btn btn-dark pin-button" data-value="x">X</button>
     <button class="btn btn-dark pin-button" data-value="0">0</button>
+    <a href="instructions.html"> 
     <button class="btn btn-dark pin-button" data-value="login">login</button>
+    </a>
   </div>
     <pre id="results"></pre>
   </div>
   <div>
-
-
-        <a href="instructions.html"> 
-            <button class="welcome-button">Start Here</button>
-        </a>
   </div>
 </div>
