--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   </head>
 <div class="pinpad">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
-  <h1 style="font-size: 1em;color: white;">Please enter your 4 digit pin</h1>
-  <h1 style="font-size: 3em;margin-top: 0.67em;margin-bottom: 0.67em;">Hearing Test</h1>
+  <h1 style="font-size: 2em;color: white;">Please enter your 4 digit pin</h1>
   <div id="pinpad" class="btn-group btn-matrix mb-3">
     <button class="btn btn-dark pin-button" data-value="1">1</button>
     <button class="btn btn-dark pin-button" data-value="2">2</button>
@@ -19,10 +18,9 @@
     <button class="btn btn-dark pin-button" data-value="7">7</button>
     <button class="btn btn-dark pin-button" data-value="8">8</button>
     <button class="btn btn-dark pin-button" data-value="9">9</button>
-    <button class="btn btn-dark pin-button" data-value="x">X</button>
+    <button class="btn btn-dark pin-button" data-value="undo">undo</button>
     <button class="btn btn-dark pin-button" data-value="0">0</button>
-    <a href="instructions.html"> 
-    <button class="btn btn-dark pin-button" data-value="login">login</button>
+    <button id="login" class="btn btn-dark pin-button" data-value="enter">enter</button>
     </a>
   </div>
     <pre id="results"></pre>
