--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <div class="pinpad">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
   <h1 style="font-size: 2em;color: white;">Please enter your 4 digit pin</h1>
+  <h1 style="font-size: 2em;color: darkgray;">    </h1>
   <div id="pinpad" class="btn-group btn-matrix mb-3">
     <button class="btn btn-dark pin-button" data-value="1">1</button>
     <button class="btn btn-dark pin-button" data-value="2">2</button>
