--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="pinpad">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
   <h1 style="font-size: 2em;color: white;">Please enter your 4 digit pin</h1>
-  <h1 style="font-size: 2em;color: darkgray;">    </h1>
+  <h1 id="protected-text" style="font-size: 2em;color: darkgray;">    </h1>
   <div id="pinpad" class="btn-group btn-matrix mb-3">
     <button class="btn btn-dark pin-button" data-value="1">1</button>
     <button class="btn btn-dark pin-button" data-value="2">2</button>
@@ -20,8 +20,8 @@
     <button class="btn btn-dark pin-button" data-value="8">8</button>
     <button class="btn btn-dark pin-button" data-value="9">9</button>
     <button class="btn btn-dark pin-button" data-value="undo">undo</button>
-    <button class="btn btn-dark pin-button" data-value="0">0</button>
-    <button id="login" class="btn btn-dark pin-button" data-value="enter">enter</button>
+    <button class="btn btn-dark undo-button" data-value="0">0</button>
+    <button id="login" class="btn btn-dark enter-button" data-value="enter">enter</button>
     </a>
   </div>
     <pre id="results"></pre>
