--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <button class="btn btn-dark pin-button" data-value="7">7</button>
     <button class="btn btn-dark pin-button" data-value="8">8</button>
     <button class="btn btn-dark pin-button" data-value="9">9</button>
-    <button class="btn btn-dark pin-button" data-value="undo">undo</button>
-    <button class="btn btn-dark undo-button" data-value="0">0</button>
+    <button class="btn btn-dark undo-button" data-value="undo">undo</button>
+    <button class="btn btn-dark pin-button" data-value="0">0</button>
     <button id="login" class="btn btn-dark enter-button" data-value="enter">enter</button>
     </a>
   </div>
