--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
   </head>
 <div class="pinpad">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
-  <h1 style="font-size: 2em;color: white;">Please enter your 4 digit pin</h1>
-  <h1 id="protected-text" style="font-size: 2em;color: darkgray;">    </h1>
+  <h1 style="font-size: 2em;color: white;">Please Enter your 4-digit account code</h1>
+  <h1 id="protected-text" style="font-size: 2em;color: darkgray;">****</h1>
   <div id="pinpad" class="btn-group btn-matrix mb-3">
-    <button class="btn btn-dark pin-button" data-value="1">1</button>
-    <button class="btn btn-dark pin-button" data-value="2">2</button>
-    <button class="btn btn-dark pin-button" data-value="3">3</button>
-    <button class="btn btn-dark pin-button" data-value="4">4</button>
-    <button class="btn btn-dark pin-button" data-value="5">5</button>
-    <button class="btn btn-dark pin-button" data-value="6">6</button>
-    <button class="btn btn-dark pin-button" data-value="7">7</button>
-    <button class="btn btn-dark pin-button" data-value="8">8</button>
-    <button class="btn btn-dark pin-button" data-value="9">9</button>
-    <button class="btn btn-dark undo-button" data-value="undo">undo</button>
-    <button class="btn btn-dark pin-button" data-value="0">0</button>
+    <button id="1button" class="btn btn-dark pin-button" data-value="1">1</button>
+    <button id="2button" class="btn btn-dark pin-button" data-value="2">2</button>
+    <button id="3button" class="btn btn-dark pin-button" data-value="3">3</button>
+    <button id="4button" class="btn btn-dark pin-button" data-value="4">4</button>
+    <button id="5button" class="btn btn-dark pin-button" data-value="5">5</button>
+    <button id="6button" class="btn btn-dark pin-button" data-value="6">6</button>
+    <button id="7button" class="btn btn-dark pin-button" data-value="7">7</button>
+    <button id="8button" class="btn btn-dark pin-button" data-value="8">8</button>
+    <button id="9button" class="btn btn-dark pin-button" data-value="9">9</button>
+    <button id="Backbutton" class="btn btn-dark undo-button" data-value="undo">undo</button>
+    <button id="0button" class="btn btn-dark pin-button" data-value="0">0</button>
     <button id="login" class="btn btn-dark enter-button" data-value="enter">enter</button>
     </a>
   </div>
     <pre id="results"></pre>
+    <script src="js/main.js"></script>
   </div>
   <div>
   </div>
