--- a/instructions.html
+++ b/instructions.html
@@ -2,21 +2,27 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Instructions</title>
+    <title>Copies</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
-<div class="welcome">
+<div class="copies">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
-
-  <h1 style="font-size: 2em;color: #CC0066">Before starting the test,</h1>
-  <ul class="instruction-list">
-    <li>Verify that you are using the Firefox browser</li>
-    <li>Find a quiet environment to take the test</li>
-    <li>Use Headphones or earphones while taking the test</li>
-  </ul>
-  <div>
-        <a href="tester.html"> 
-            <button class="welcome-button">Continue</button>
-        </a>
+  <h1 style="font-size: 2em;color: white;">Please enter the number of copies you wish to print </h1>
+  <h1 id="protected-text" style="font-size: 2em;color: darkgray;">****</h1>
+  <div id="pinpad" class="btn-group btn-matrix mb-3">
+    <button id="1button" class="btn btn-dark pin-button" data-value="1">1</button>
+    <button id="2button" class="btn btn-dark pin-button" data-value="2">2</button>
+    <button id="3button" class="btn btn-dark pin-button" data-value="3">3</button>
+    <button id="4button" class="btn btn-dark pin-button" data-value="4">4</button>
+    <button id="5button" class="btn btn-dark pin-button" data-value="5">5</button>
+    <button id="6button" class="btn btn-dark pin-button" data-value="6">6</button>
+    <button id="7button" class="btn btn-dark pin-button" data-value="7">7</button>
+    <button id="8button" class="btn btn-dark pin-button" data-value="8">8</button>
+    <button id="9button" class="btn btn-dark pin-button" data-value="9">9</button>
+    <button id="Backbutton" class="btn btn-dark undo-button" data-value="undo">undo</button>
+    <button id="0button" class="btn btn-dark pin-button" data-value="0">0</button>
+    <button id="login" class="btn btn-dark enter-button" data-value="enter">enter</button>
+    </a>
   </div>
-</div>
+    <pre id="results"></pre>
+    <script src="js/main.js"></script>
