populate number box

--- a/instructions.html
+++ b/instructions.html
@@ -8,6 +8,7 @@
 <div class="copies">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
   <h1 style="font-size: 2em;color: white;">Please enter the number of copies you wish to print </h1>
+  <input type="number" id="copies" name="copies">
   <div id="pinpad" class="btn-group btn-matrix mb-3">
     <button id="1button" class="btn btn-dark pin-button" data-value="1">1</button>
     <button id="2button" class="btn btn-dark pin-button" data-value="2">2</button>
