--- a/instructions.html
+++ b/instructions.html
@@ -8,9 +8,9 @@
 <div class="copies">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
   <h1 style="font-size: 2em;color: white;">Please enter the number of copies you wish to print </h1>
-  <form>
+  <div class="copybox">
     <input type="number" id="copies" name="copies">
-  </form>
+  </div>
   <div id="pinpad" class="btn-group btn-matrix mb-3">
     <button id="1button" class="btn btn-dark pin-button" data-value="1">1</button>
     <button id="2button" class="btn btn-dark pin-button" data-value="2">2</button>
