--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
+  <body>
 <div class="pinpad">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
   <h1 style="font-size: 2em;color: white;">Please Enter your 4-digit account code</h1>
@@ -30,3 +31,4 @@
   <div>
   </div>
 </div>
+</body>
