--- a/printerpage.html
+++ b/printerpage.html
@@ -13,7 +13,9 @@
 
     <h1 style="font-size: 2em;color: #CC0066">Before starting the test,</h1>
     <div id="sidesBox"></div>
-    <div id="brightnessBox"></div>
+    <div id="brightBox" class = "printerBox">
+      <p id="brightInfo">Brightness: 50%</p>
+    </div>
     <div id="sourceBin"></div>
     <div id="seperatorBin"></div>
     <div>
@@ -23,7 +25,6 @@
 
     <!-- The Modal -->
     <div id="numbersModal" class="modal">
-
       <!-- Modal content -->
       <div class="modal-content">
         <span id="closeNum" class="close">&times;</span>
@@ -45,6 +46,15 @@
           </a>
         </div>
       </div>
+    </div>
+    <div id="brightModal" class="modal">
+      <div class="modal-content">
+      <span id="closeBright" class="close">&times;</span>
+        <h1 style="font-size: 2em;color: darkgray;">Enter Your desired brightness</h1>
+        <h1 id="brightness-text" style="font-size: 2em;color: darkgray;">50%</h1>
+        <input id="brightness" type="range" min="0" max="1" step="0.01" value="0.5"/>
+        <button id="subBright" class="btn btn-dark pin-button">Okay</button>
+    </div>
     </div>
   </div>
   <script src="js/PrinterPage.js"></script>
