--- a/printerpage.html
+++ b/printerpage.html
@@ -20,6 +20,7 @@
     <div id="seperatorBin"></div>
     <div>
       <button id="numberbutton" class="btn btn-dark pin-button">Number of Copies: 0</button>
+      <button id="printButton" class="btn btn-dark pin-button">PREVIEW</button>
       <button id="printButton" class="btn btn-dark pin-button">COPY</button>
     </div>
 
