style not showing up online

--- a/printerpage.html
+++ b/printerpage.html
@@ -17,6 +17,7 @@
       <p id="brightInfo">Brightness: 50%</p>
     </div>
     <div>
+      <link rel="stylesheet" href="style.css"/>
       <div class="radio-toolbar">
         Paper Source
         <input type="radio" id="Bin1" name="bin" value="bin1" checked>
