--- a/printerpage.html
+++ b/printerpage.html
@@ -12,7 +12,9 @@
     <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
 
     <h1 style="font-size: 2em;color: #CC0066">Before starting the test,</h1>
-    <div id="sidesBox"></div>
+    <div id="sidesBox" class = "printerBox">
+      <p id = "sidesInfo">Sides 1 -> 1</p>
+    </div>
     <div id="brightBox" class = "printerBox">
       <p id="brightInfo">Brightness: 50%</p>
     </div>
@@ -54,6 +56,25 @@
         <h1 id="brightness-text" style="font-size: 2em;color: darkgray;">50%</h1>
         <input id="brightness" type="range" min="0" max="1" step="0.01" value="0.5"/>
         <button id="subBright" class="btn btn-dark pin-button">Okay</button>
+    </div>
+    </div>
+    <div id="sidesModal" class="modal">
+      <div class="modal-content">
+      <span id="closeSides" class="close">&times;</span>
+        <h1 style="font-size: 2em;color: darkgray;">Choose your preferred format</h1>
+        <div class="divTable" style="border: 4px solid #000;" >
+          <div class="divTableBody">
+          <div class="divTableRow">
+          <div id='1b1Cell' class="divTableCell"><p class = 'sidesText'>1 -> 1</p></div>
+          <div id='1b2Cell' class="divTableCell"><p class="sidesText">1 -> 2</p></div>
+          </div>
+          <div class="divTableRow">
+          <div id='2b2Cell'class="divTableCell"><p class = 'sidesText'>2 -> 2</p></div>
+          <div id='2b1Cell'class="divTableCell"><p class = 'sidesText'>2 -> 1</p></div>
+          </div>
+          </div>
+          </div>
+        <button id="subSides" class="btn btn-dark pin-button">Okay</button>
     </div>
     </div>
   </div>
