quickfix for page selector

--- a/printerpage.html
+++ b/printerpage.html
@@ -13,7 +13,7 @@
 
     <h1 style="font-size: 2em;color: #CC0066">Before starting the test,</h1>
     <div id="sidesBox" class = "printerBox">
-      <p id = "sidesInfo">Sides 1 -> 1</p>
+      <p id = "sidesInfo">Sides: 1 -> 1</p>
     </div>
     <div id="brightBox" class = "printerBox">
       <p id="brightInfo">Brightness: 50%</p>
