--- a/printerpage.html
+++ b/printerpage.html
@@ -11,15 +11,17 @@
   <div class="welcome">
     <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
 
-    <h1 style="font-size: 2em;color: #CC0066">Before starting the test,</h1>
+    <h1 style="font-size: 2em;color: #CC0066;font-family: Arial;">Printer Settings</h1>
+    Sides:
     <div id="sidesBox" class = "printerBox">
-      <p id = "sidesInfo">Sides: 1 -> 1</p>
+      <p id = "sidesInfo">1 -> 1</p>
     </div>
+  </br>
+    Brightness:
     <div id="brightBox" class = "printerBox">
-      <p id="brightInfo">Brightness: 50%</p>
+      <p id="brightInfo">50%</p>
     </div>
     <div>
-      <link rel="stylesheet" href="style.css"/>
       <div class="radio-toolbar">
         Paper Source
         <input type="radio" id="Bin1" name="bin" value="bin1" checked>
@@ -38,7 +40,7 @@
       <input type="radio" id="No" name="separatortoggle" value="no" onclick="hideDIV()" checked>
       <label for="No">No</label>
       <div id="showonselection" class="radio-toolbar">
-        <br> Separator Source
+        Separator Source
         <input type="radio" id="SepBin1" name="separatorbin" value="sepbin1" checked>
         <label for="SepBin1">Bin 1</label>
 
