--- a/printerpage.html
+++ b/printerpage.html
@@ -51,7 +51,7 @@
         <label for="SepBin3">Bin 3</label>
       </div>
     </div>
-    <div>
+    <div class="sameLine">
       <button id="numberbutton" class="btn btn-dark pin-button">Number of Copies: 0</button>
       <button id="printButton" class="btn btn-dark pin-button">PREVIEW</button>
       <button id="printButton" class="btn btn-dark pin-button">COPY</button>
