--- a/printerpage.html
+++ b/printerpage.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-  <div class="welcome">
-    <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
-
+  <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
+  <div class="printing-stage">
     <h1 style="font-size: 2em;color: #CC0066;font-family: Arial;">Printer Settings</h1>
     Sides:
     <div id="sidesBox" class = "printerBox">
