fixing buttons of copying

--- a/printerpage.html
+++ b/printerpage.html
@@ -51,9 +51,9 @@
       </div>
     </div>
     <div class="sameLine">
-      <button id="numberbutton" class="btn btn-dark pin-button">Number of Copies: 0</button>
-      <button id="printButton" class="btn btn-dark pin-button">PREVIEW</button>
-      <button id="printButton" class="btn btn-dark pin-button">COPY</button>
+      <button id="numberbutton" class="btn btn-dark last-line">Number of Copies: 0</button>
+      <button id="printButton" class="btn btn-dark last-line">PREVIEW</button>
+      <button id="printButton" class="btn btn-dark last-line">COPY</button>
     </div>
 
     <!-- The Modal -->
