trying to center elements

--- a/printerpage.html
+++ b/printerpage.html
@@ -12,6 +12,7 @@
   <div class="printing-stage">
     <h1 style="font-size: 2em;color: #CC0066;font-family: Arial;">Printer Settings</h1>
     Sides:
+    <div class="different-elements"> </div>
     <div id="sidesBox" class = "printerBox">
       <p id = "sidesInfo">1 -> 1</p>
     </div>
