--- a/printerpage.html
+++ b/printerpage.html
@@ -12,43 +12,44 @@
   <div class="printing-stage">
     <h1 style="font-size: 2em;color: #CC0066;font-family: Arial;">Printer Settings</h1>
     Sides:
-    <div class="different-elements"> </div>
-    <div id="sidesBox" class = "printerBox">
-      <p id = "sidesInfo">1 -> 1</p>
-    </div>
-  </br>
-    Brightness:
-    <div id="brightBox" class = "printerBox">
-      <p id="brightInfo">50%</p>
-    </div>
-    <div>
-      <div class="radio-toolbar">
-        Paper Source
-        <input type="radio" id="Bin1" name="bin" value="bin1" checked>
-        <label for="Bin1">Bin 1</label>
-
-        <input type="radio" id="Bin2" name="bin" value="bin2">
-        <label for="Bin2">Bin 2</label>
-
-        <input type="radio" id="Bin3" name="bin" value="bin3">
-        <label for="Bin3">Bin 3</label>
+    <div class="different-elements"> 
+      <div id="sidesBox" class = "printerBox">
+        <p id = "sidesInfo">1 -> 1</p>
       </div>
-      <div class="radio-toolbar">
-      Separator Page
-      <input type="radio" id="Yes" name="separatortoggle" value="yes" onclick="showDIV()">
-      <label for="Yes">Yes</label>
-      <input type="radio" id="No" name="separatortoggle" value="no" onclick="hideDIV()" checked>
-      <label for="No">No</label>
-      <div id="showonselection" class="radio-toolbar">
-        Separator Source
-        <input type="radio" id="SepBin1" name="separatorbin" value="sepbin1" checked>
-        <label for="SepBin1">Bin 1</label>
+    </br>
+      Brightness:
+      <div id="brightBox" class = "printerBox">
+        <p id="brightInfo">50%</p>
+      </div>
+        <div class="radio-toolbar">
+          Paper Source
+          <input type="radio" id="Bin1" name="bin" value="bin1" checked>
+          <label for="Bin1">Bin 1</label>
 
-        <input type="radio" id="SepBin2" name="separatorbin" value="sepbin2">
-        <label for="SepBin2">Bin 2</label>
+          <input type="radio" id="Bin2" name="bin" value="bin2">
+          <label for="Bin2">Bin 2</label>
 
-        <input type="radio" id="SepBin3" name="separatorbin" value="sepbin3">
-        <label for="SepBin3">Bin 3</label>
+          <input type="radio" id="Bin3" name="bin" value="bin3">
+          <label for="Bin3">Bin 3</label>
+        </div>
+        <div class="radio-toolbar">
+        Separator Page
+        <input type="radio" id="Yes" name="separatortoggle" value="yes" onclick="showDIV()">
+        <label for="Yes">Yes</label>
+        <input type="radio" id="No" name="separatortoggle" value="no" onclick="hideDIV()" checked>
+        <label for="No">No</label>
+        <div id="showonselection" class="radio-toolbar">
+          Separator Source
+          <input type="radio" id="SepBin1" name="separatorbin" value="sepbin1" checked>
+          <label for="SepBin1">Bin 1</label>
+
+          <input type="radio" id="SepBin2" name="separatorbin" value="sepbin2">
+          <label for="SepBin2">Bin 2</label>
+
+          <input type="radio" id="SepBin3" name="separatorbin" value="sepbin3">
+          <label for="SepBin3">Bin 3</label>
+        </div>
+      </div>
       </div>
     </div>
     <div class="sameLine">
