trying to fix bottom

--- a/printerpage.html
+++ b/printerpage.html
@@ -21,6 +21,7 @@
       <div id="brightBox" class = "printerBox">
         <p id="brightInfo">50%</p>
       </div>
+      <div>
         <div class="radio-toolbar">
           Paper Source
           <input type="radio" id="Bin1" name="bin" value="bin1" checked>
@@ -51,7 +52,6 @@
         </div>
       </div>
       </div>
-    </div>
     <div class="sameLine">
       <button id="numberbutton" class="btn btn-dark last-line">Number of Copies: 0</button>
       <button id="printButton" class="btn btn-dark last-line">PREVIEW</button>
