trying to fix bottom again

--- a/printerpage.html
+++ b/printerpage.html
@@ -52,6 +52,7 @@
         </div>
       </div>
       </div>
+      </div>
     <div class="sameLine">
       <button id="numberbutton" class="btn btn-dark last-line">Number of Copies: 0</button>
       <button id="printButton" class="btn btn-dark last-line">PREVIEW</button>
