--- a/printerpage.html
+++ b/printerpage.html
@@ -10,7 +10,7 @@
 <body>
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
   <div class="printing-stage">
-    <h1 style="font-size: 2em;color: #CC0066;font-family: Arial;">Printer Settings</h1>
+    <h1 style="font-size: 2em;color: white;font-family: Arial;">Printer Settings</h1>
     Sides:
     <div class="different-elements"> 
       <div id="sidesBox" class = "printerBox">
