logout button added

--- a/printerpage.html
+++ b/printerpage.html
@@ -54,8 +54,8 @@
       </div>
       </div>
     <div class="sameLine">
+      <button id="printButton" class="btn btn-dark last-line" onclick="document.location='index.html'">LOGOUT</button>
       <button id="numberbutton" class="btn btn-dark last-line">Number of Copies: 0</button>
-      <button id="printButton" class="btn btn-dark last-line">PREVIEW</button>
       <button id="printButton" class="btn btn-dark last-line">COPY</button>
     </div>
 
