fixed merge conflict

--- a/printerpage.html
+++ b/printerpage.html
@@ -65,16 +65,16 @@
         <span id="closeNum" class="close">&times;</span>
         <h1 style="font-size: 2em;color: darkgray;">Enter the number of desired copies</h1>
         <h1 id="numCopies-text" style="font-size: 2em;color: darkgray;">0</h1>
-        <div id="pinpad" class="btn-group btn-matrix mb-3">
-          <button id="1button" class="btn btn-dark pin-button" data-value="1">1</button>
-          <button id="2button" class="btn btn-dark pin-button" data-value="2">2</button>
-          <button id="3button" class="btn btn-dark pin-button" data-value="3">3</button>
-          <button id="4button" class="btn btn-dark pin-button" data-value="4">4</button>
-          <button id="5button" class="btn btn-dark pin-button" data-value="5">5</button>
-          <button id="6button" class="btn btn-dark pin-button" data-value="6">6</button>
-          <button id="7button" class="btn btn-dark pin-button" data-value="7">7</button>
-          <button id="8button" class="btn btn-dark pin-button" data-value="8">8</button>
-          <button id="9button" class="btn btn-dark pin-button" data-value="9">9</button>
+        <div id="pinpad" class="btn-group btn-matrix2 mb-3">
+          <button id="1button" class="btn btn-dark pin-button2" data-value="1">1</button>
+          <button id="2button" class="btn btn-dark pin-button2" data-value="2">2</button>
+          <button id="3button" class="btn btn-dark pin-button2" data-value="3">3</button>
+          <button id="4button" class="btn btn-dark pin-button2" data-value="4">4</button>
+          <button id="5button" class="btn btn-dark pin-button2" data-value="5">5</button>
+          <button id="6button" class="btn btn-dark pin-button2" data-value="6">6</button>
+          <button id="7button" class="btn btn-dark pin-button2" data-value="7">7</button>
+          <button id="8button" class="btn btn-dark pin-button2" data-value="8">8</button>
+          <button id="9button" class="btn btn-dark pin-button2" data-value="9">9</button>
           <button id="Backbutton" class="btn btn-dark undo-button" data-value="undo">undo</button>
           <button id="0button" class="btn btn-dark pin-button" data-value="0">0</button>
           <button id="login" class="btn btn-dark enter-button" data-value="enter">enter</button>
