copy linked to printing page

--- a/printerpage.html
+++ b/printerpage.html
@@ -55,8 +55,8 @@
       </div>
     <div class="sameLine">
       <button id="printButton" class="btn btn-dark last-line" onclick="document.location='index.html'">LOGOUT</button>
-      <button id="numberbutton" class="btn btn-dark last-line">Number of Copies: 0</button>
-      <button id="printButton" class="btn btn-dark last-line">COPY</button>
+      <button id="numberbutton" class="btn btn-dark last-line">Number of Copies: 1</button>
+      <button id="printButton" class="btn btn-dark last-line" onclick="document.location='printing.html'">COPY</button>
     </div>
 
     <!-- The Modal -->
