--- a/printing.html
+++ b/printing.html
@@ -8,9 +8,8 @@
 </head>
 <body onload="progressBar()">
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
-  <div class="printing-stage">
-    Copying...
-  </br>
+  <div class="printing-stage" style="width:fit-content">
+    <div id="copyinglabel">Copying...</div>
   <script src="js/PrinterPage.js"></script>
     <progress id="printingbar" value="0" max="100">50%</progress>
   <div class="sameLine">
