wide slider, small login

--- a/printerpage.html
+++ b/printerpage.html
@@ -12,7 +12,7 @@
   <div class="printing-stage">
     <h1 style="font-size: 2em;color: white;font-family: Arial;">Printer Settings</h1>
     Sides:
-    <div class="different-elements"> 
+    <div class="different-elements">
       <div id="sidesBox" class = "printerBox">
         <p id = "sidesInfo">1 -> 1</p>
       </div>
@@ -88,7 +88,7 @@
       <span id="closeBright" class="close">&times;</span>
         <h1 style="font-size: 1em;color: darkgray;">Enter Your desired brightness</h1>
         <h1 id="brightness-text" style="font-size: 2em;color: darkgray;">50%</h1>
-        <input id="brightness" type="range" min="0" max="1" step="0.01" value="0.5"/>
+        <input class="bright-slider" id="brightness" type="range" min="0" max="1" step="0.01" value="0.5"/>
         <button id="subBright" class="btn btn-dark pin-button">Okay</button>
     </div>
     </div>
