fixing bottom line

--- a/printerpage.html
+++ b/printerpage.html
@@ -55,7 +55,7 @@
         </div>
       </div>
       </div>
-    <div class="sameLine">
+    <div class="sameLine2">
       <button id="printButton" class="btn btn-dark last-line" onclick="document.location='index.html'">LOGOUT</button>
       <button id="numberbutton" class="btn btn-dark last-line">Number of Copies: 1</button>
       <button id="printButton" class="btn btn-dark last-line" onclick="document.location='printing.html'">COPY</button>
