--- a/printerpage.html
+++ b/printerpage.html
@@ -93,7 +93,7 @@
         <h1 style="font-size: 1em;color: darkgray;">Enter Your desired brightness</h1>
         <h1 id="brightness-text" style="font-size: 2em;color: darkgray;">0%</h1>
         <input class="bright-slider" id="brightness" type="range" min="-1" max="1" step="0.01" value="0"/>
-        <button id="subBright" class="btn btn-dark pin-button">Okay</button>
+        <button id="subBright" class="btn btn-dark pin-button">Select</button>
     </div>
     </div>
     <div id="sidesModal" class="modal">
@@ -112,7 +112,7 @@
           </div>
           </div>
           </div>
-        <button id="subSides" class="btn btn-dark pin-button">Okay</button>
+        <button id="subSides" class="btn btn-dark pin-button">Select</button>
     </div>
     </div>
   </div>
