fixing first page

--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
   <img src="assets/team_logo.png" alt="team_logo" height="100px" width="100px">
   <div class="printing-stage">
       <h1 style="font-size: 2em;color: white;">Please Enter your 4-digit account code</h1>
-      <h1 id="protected-text" style="font-size: 2em;color: darkgray;">****</h1>
+      <h1 id="protected-text" style="font-size: 2em;color: darkgray;">_ _ _ _</h1>
       <div id="pinpad" class="btn-group btn-matrix mb-3">
-        <button id="1button" class="btn btn-dark pin-button" data-value="1">1</button>
-        <button id="2button" class="btn btn-dark pin-button" data-value="2">2</button>
-        <button id="3button" class="btn btn-dark pin-button" data-value="3">3</button>
-        <button id="4button" class="btn btn-dark pin-button" data-value="4">4</button>
-        <button id="5button" class="btn btn-dark pin-button" data-value="5">5</button>
-        <button id="6button" class="btn btn-dark pin-button" data-value="6">6</button>
-        <button id="7button" class="btn btn-dark pin-button" data-value="7">7</button>
-        <button id="8button" class="btn btn-dark pin-button" data-value="8">8</button>
-        <button id="9button" class="btn btn-dark pin-button" data-value="9">9</button>
-        <button id="Backbutton" class="btn btn-dark undo-button" data-value="undo">undo</button>
-        <button id="0button" class="btn btn-dark pin-button" data-value="0">0</button>
-        <button id="login" class="btn btn-dark enter-button" data-value="enter">enter</button>
+        <button id="1button" class="btn  pin-button">1</button>
+        <button id="2button" class="btn pin-button">2</button>
+        <button id="3button" class="btn pin-button">3</button>
+        <button id="4button" class="btn pin-button">4</button>
+        <button id="5button" class="btn pin-button">5</button>
+        <button id="6button" class="btn pin-button">6</button>
+        <button id="7button" class="btn pin-button">7</button>
+        <button id="8button" class="btn pin-button">8</button>
+        <button id="9button" class="btn pin-button">9</button>
+        <button id="Backbutton" class="btn undo-button">undo</button>
+        <button id="0button" class="btn pin-button">0</button>
+        <button id="login" class="btn enter-button">enter</button>
         </a>
       </div>
       <pre id="results"></pre>
