--- a/printerpage.html
+++ b/printerpage.html
@@ -60,9 +60,9 @@
      </p1>
     </div>
     <div class="sameLine2">
-      <button id="printButton" class="btn btn-dark last-line" onclick="document.location='index.html'">LOGOUT</button>
+      <button id="printButton" style="background-color: #CC0066" class="btn btn-dark last-line" onclick="document.location='index.html'">LOGOUT</button>
       <button id="numberbutton" class="btn btn-dark last-line">Number of Copies: 1</button>
-      <button id="printButton" class="btn btn-dark last-line" onclick="document.location='printing.html'">COPY</button>
+      <button id="printButton" class="btn btn-dark last-line" style="background-color: #66cc00" onclick="document.location='printing.html'">COPY</button>
     </div>
 
     <!-- The Modal -->
