--- a/printing.html
+++ b/printing.html
@@ -13,8 +13,8 @@
   <script src="js/PrinterPage.js"></script>
     <progress id="printingbar" value="0" max="100">50%</progress>
   <div class="sameLine">
-    <button id="printButton" class="btn btn-dark last-line" onclick="document.location='printerpage.html'">ANOTHER COPY</button>
-    <button id="printButton" class="btn btn-dark last-line" onclick="document.location='index.html'">LOGOUT</button>
+    <button id="printButton"  class="btn last-line" onclick="document.location='printerpage.html'">ANOTHER COPY</button>
+    <button id="printButton"  style="background-color: #CC0066" class="btn last-line" onclick="document.location='index.html'">LOGOUT</button>
   </div>
   </div>
 </br> 
